# django-dag-admin

./: .gitignore  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
django_dag_admin/: admin.py  forms.py  formset.py  views.py
django_dag_admin/static/django-dag-admin/: django-dag-admin.css  django-dag-admin.js
django_dag_admin/templates/admin/: tree_change_list.html  tree_change_list_results.html
django_dag_admin/templates/admin/django_dag_admin/: change_list.html  change_list_result_path.html  change_list_results.html
django_dag_admin/templatetags/: __init__.py  admin_dag_tree.py  admin_tree.py
django_dag_admin/tests/: admin.py  apps.py  models.py  test_django_dag_admin.py  urls.py
django_dag_admin/tests/migrations/: 0001_initial.py
django_dag_admin/utils/: __init__.py  charsortkey.py
docs/: conf.py  index.rst  settings.py
src/django_dag_admin/: actions.py  admin.py  forms.py  formset.py  views.py
src/django_dag_admin/static/django-dag-admin/: django-dag-admin.css  django-dag-admin.js
src/django_dag_admin/templates/admin/django_dag_admin/: change_list_results.html
src/django_dag_admin/templatetags/: admin_dag_tree.py
src/django_dag_admin/utils/: __init__.py  misc.py
testapp/: settings.py  sqlite.db  urls.py
tests/unit/settings/: __init__.py
tests/unit/testapp/: admin.py  models.py  tests.py  urls.py
