[bdist_wheel]
universal=1

[metadata]
name = django-dag-admin
version = attr: django_dag_admin.__version__
description=Admin interface for Django-DAG a Directed Acyclic Graph implementation for Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Paul Gammans
author_email = pgammans@gammascience.co.uk
maintainer =  Paul Gammans
maintainer_email = pgammans@gammascience.co.uk
license = Apache License 2.0
url = https://github.com/bva/django-dag-admin
project_urls =
    Bug Tracker = https://github.com/bva/django-dag-admin/issues
    Repository = https://github.com/bva/django-dag-admin
    Documentation = https://github.com/bva/django-dag-admin
classifiers =
        Development Status :: 2 - Pre-Alpha
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Framework :: Django
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    django_dag>=2.1.1
setup_requires =
  setuptools_scm
  packaging

[options.packages.find]
where = src

[options.package_data]
django_dag_admin =
    static/django-dag-admin/*.js
    static/django-dag-admin/*.css
    static/django-dag-admin/*.png
    templates/admin/django_dag_admin/*.html
